--- a/kubedefs/dbdeploy.yaml
+++ b/kubedefs/dbdeploy.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: vprodb
-        image: vprocontainers/vprofiledb
+        image: koilraj/vprofiledb
         volumeMounts:
         - mountPath: /var/lib/mysql
           name: vpro-db-data
