--- a/kubedefs/appingress.yaml
+++ b/kubedefs/appingress.yaml
@@ -7,8 +7,7 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - host: vprofile.hkhinfoteck.xyz
-    http:
+  - http:
       paths:
       - path: /
         pathType: Prefix
