--- a/kubedefs/appingress.yaml
+++ b/kubedefs/appingress.yaml
@@ -7,7 +7,8 @@ metadata:
 spec:
   ingressClassName: nginx
   rules:
-  - http:
+  - host: vprofile.koilraj.ip-ddns.com
+    http:
       paths:
       - path: /
         pathType: Prefix
